--- a/Nicholas-reid-angell-canonical-index.html
+++ b/Nicholas-reid-angell-canonical-index.html
@@ -1,5 +1,16 @@
 
 ℕʳ
 
+https://medium.com/@canonical/canonical-mathbb-n-mathbb-r-nick-space-03feba03bb38
+
+LinkedIn/Canonical
+
+@nicholas.Reid.Angell Instagram
+@CanonicalNick Facebook
+zoeyai-greenteam GitHub
+NicholAI91 GitHub
+
+
+
 https://docs.openstack.org/releasenotes/openstack-manuals/index.html
 
